# pong

./: .clang-format  .gitignore  CMakeLists.txt  LICENSE  Makefile  README.md
include/: ball.h  paddle.h
include/pong/: ball.h  constants.h  paddle.h
src/: ball.cpp  ecs.cpp  main.cpp  paddle.cpp
